--- a/style.css
+++ b/style.css
@@ -1,16 +1,49 @@
+:root {
+  --branding-color: #6C63FF;
+  --secondary-color: #F9F7FE;
+  --heading-font-family: "Playfair Display", serif; 
+  --default-font-family: "Poppins", sans-serif;
+}
+
+body {
+  font-family: var(--default-font-family);
+}
+
 h1 {
-  color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
+  font-size: 96px;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
 
 .hero {
-  background: #F9F7FE;
+  background:var(--secondary-color);
   text-align: center;
+  padding: 160px 20px;
 }
 
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 54px;
+  color: #272142;
+}
+
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+}
