--- a/style.css
+++ b/style.css
@@ -15,8 +15,14 @@ h1 {
   font-size: 96px;
 }
 
+h2 {
+  font-size: 64px;
+}
+
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 1.7px;
 }
 
 .hero {
@@ -43,6 +49,15 @@ p {
   background: var(--branding-color);
   border-radius: 4px;
   color: #ffffff;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
   padding: 18px 30px;
