--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ p {
   padding: 160px 20px;
 }
 
+
+
 .hero p {
   font-size: 36px;
   font-weight: bold;
@@ -44,6 +46,24 @@ p {
   font-weight: 400;
   line-height: 1.5;
   font-size: 24px;
+}
+
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section-content {
+  margin: 30px;
 }
 
 .btn-branding {
@@ -71,7 +91,7 @@ p {
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
-    line-height: 2;
+    line-height: 56px;
   }
 
   h2 {
@@ -80,6 +100,11 @@ p {
 
   .hero {
     padding: 80px 20px;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 
   .project-description {
